# Tanaga-Agent

./: .env.example  .gitignore  .replit  README.md  Tanaga Agent.ipynb  main.py  package-lock.json  package.json  pyproject.toml  replit.md  server.ts  tanaga.py  tsconfig.json
attached_assets/: tanaga-agent_1766141511047.py
previous/: index.html  script.js  styles.css
previous/public/static/: script.js  styles.css
src/: app.ts  types.ts
src/config/: env.ts
src/routes/: generateTanaga.ts  rag.ts
src/scripts/: rebuildEmbeddings.ts
src/services/: poetryService.ts  ragService.ts
static/: script.js
templates/: index.html
tests/: poetryService.test.ts  ragService.test.ts
